    zero. The following new metrics have been introduced as replacements:
    master/slave_unreachable_scheduled, master/slave_unreachable_canceled,
    and master/slave_unreachable_completed.

  * [MESOS-5955] - Health check binary "mesos-health-check" is removed.


Release Notes - Mesos - Version 1.0.2
--------------------------------------------
* This is a bug fix release.

All Issues:
** Bug
    * [MESOS-6074] - Master check failure if the metrics endpoint is polled soon after it starts.


Release Notes - Mesos - Version 1.0.1
--------------------------------------------
* This is a bug fix release.

All Issues:
** Bug
    * [MESOS-5388] - MesosContainerizerLaunch flags execute arbitrary commands via shell.
    * [MESOS-5862] - External links to .md files broken.
    * [MESOS-5911] - Webui redirection to leader in browser does not work
    * [MESOS-5913] - Stale socket FD usage when using libevent + SSL.
    * [MESOS-5922] - mesos-agent --help exit status is 1
    * [MESOS-5923] - Ubuntu 14.04 LTS GPU Isolator "/run" directory is noexec
    * [MESOS-5927] - Unable to run "scratch" Dockerfiles with Unified Containerizer.
    * [MESOS-5928] - Agent's '--version' flag doesn't work
    * [MESOS-5930] - Orphan tasks can show up as running after they have finished.
    * [MESOS-5943] - Incremental http parsing of URLs leads to decoder error
    * [MESOS-5945] - NvidiaVolume::create() should check for root before creating volume
    * [MESOS-5959] - All non-root tests fail on GPU machine
    * [MESOS-5969] - Linux 'MountInfoTable' entries not sorted as expected
    * [MESOS-5982] - NvidiaVolume errors out if any binary is missing
    * [MESOS-5986] - SSL Socket CHECK can fail after socket receives EOF
    * [MESOS-5988] - PollSocketImpl can write to a stale fd.

** Improvement
    * [MESOS-5830] - Make a sweep to trim excess space around angle brackets

** Task
    * [MESOS-5970] - Remove HTTP_PARSER_VERSION_MAJOR < 2 code in decoder.

