@@ -18,6 +18,8 @@
 #else
 #include <dirent.h>
 #endif // __WINDOWS__
+
+#include <errno.h>
 #include <stdlib.h>
 
 #include <list>
@@ -25,8 +27,6 @@
 
 #include <stout/error.hpp>
 #include <stout/try.hpp>
-
-#include <stout/os/direntsize.hpp>
 
 
 namespace os {
@@ -36,36 +36,32 @@ inline Try<std::list<std::string>> ls(const std::string& directory)
   DIR* dir = opendir(directory.c_str());
 
   if (dir == nullptr) {
-    // Preserve `opendir` error.
     return ErrnoError("Failed to opendir '" + directory + "'");
-  }
-
-  dirent* temp = (dirent*) malloc(os::dirent_size(dir));
-
-  if (temp == nullptr) {
-    // Preserve `malloc` error.
-    ErrnoError error("Failed to allocate directory entries");
-    closedir(dir);
-    return error;
   }
 
   std::list<std::string> result;
   struct dirent* entry;
-  int error;
 
-  while ((error = readdir_r(dir, temp, &entry)) == 0 && entry != nullptr) {
+  // Zero `errno` before starting to call `readdir`. This is necessary
+  // to allow us to determine when `readdir` returns an error.
+  errno = 0;
+
+  while ((entry = readdir(dir)) != nullptr) {
     if (strcmp(entry->d_name, ".") == 0 || strcmp(entry->d_name, "..") == 0) {
       continue;
     }
     result.push_back(entry->d_name);
   }
 
-  free(temp);
-  closedir(dir);
+  if (errno != 0) {
+    // Preserve `readdir` error.
+    Error error = ErrnoError("Failed to read directory");
+    closedir(dir);
+    return error;
+  }
 
-  if (error != 0) {
-    // Preserve `readdir_r` error.
-    return ErrnoError("Failed to read directories");
+  if (closedir(dir) == -1) {
+    return ErrnoError("Failed to close directory");
   }
 
   return result;
