@@ -32,7 +32,9 @@ Release Notes - Mesos - Version 1.0.2
 
 All Issues:
 ** Bug
+    * [MESOS-6013] - Use readdir instead of readdir_r.
     * [MESOS-6074] - Master check failure if the metrics endpoint is polled soon after it starts.
+    * [MESOS-6122] - Mesos slave throws systemd errors even when passed a flag to disable systemd.
 
 
 Release Notes - Mesos - Version 1.0.1
